--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utilities",
+  "name": "utilities-js",
   "version": "1.0.0",
   "description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
   "main": "util.js",
@@ -22,7 +22,10 @@
     "date",
     "manipulation"
   ],
-  "author": "Tiago Ribeiro - http://www.tiago-ribeiro.com/",
+  "author": {
+    "name": "Tiago Ribeiro",
+    "url": "http://www.tiago-ribeiro.com/"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ribeiro-Tiago/utilities/issues"
