--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utilities-js",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
   "main": "util.js",
   "scripts": {
@@ -19,8 +19,7 @@
     "validation",
     "array",
     "manipulation",
-    "date",
-    "manipulation"
+    "date"
   ],
   "author": {
     "name": "Tiago Ribeiro",
