--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "utilities-js",
   "version": "1.1.0",
   "description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
-  "main": "util.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
