--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "utilities-js",
-  "version": "1.1.2",
-  "description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ribeiro-Tiago/utilities.git"
-  },
-  "keywords": [
-    "javascript",
-    "utilities",
-    "utilitarian",
-    "value",
-    "validation",
-    "array",
-    "manipulation",
-    "date"
-  ],
-  "author": {
-    "name": "Tiago Ribeiro",
-    "url": "http://www.tiago-ribeiro.com/"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Ribeiro-Tiago/utilities/issues"
-  },
-  "homepage": "https://github.com/Ribeiro-Tiago/utilities#readme",
-  "dependencies": {
-    "@types/node": "^10.12.0"
-  }
+	"name": "utilities-js",
+	"version": "1.1.3",
+	"description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Ribeiro-Tiago/utilities.git"
+	},
+	"keywords": [
+		"javascript",
+		"utilities",
+		"validation",
+		"manipulation"
+	],
+	"author": {
+		"name": "Tiago Ribeiro",
+		"url": "http://www.tiago-ribeiro.com/"
+	},
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Ribeiro-Tiago/utilities/issues"
+	},
+	"homepage": "https://github.com/Ribeiro-Tiago/utilities#readme",
+	"dependencies": {},
+	"devDependencies": {
+		"@babel/core": "^7.1.2",
+		"@babel/preset-env": "^7.1.0",
+		"babel-loader": "^8.0.4",
+		"ts-loader": "^5.2.2",
+		"typescript": "^3.1.3",
+		"webpack": "^4.23.1",
+		"webpack-cli": "^3.1.2"
+	}
 }
