--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Utilitarian functions (such has value validations, array and date manipulation) that help day-to-day life",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha --require ts-node/register test/*.ts"
 	},
 	"repository": {
 		"type": "git",
@@ -29,8 +29,15 @@
 	"devDependencies": {
 		"@babel/core": "^7.1.2",
 		"@babel/preset-env": "^7.1.0",
+		"@types/assert": "^1.4.0",
+		"@types/chai": "^4.1.7",
+		"@types/mocha": "^5.2.5",
+		"@types/node": "^10.12.0",
 		"babel-loader": "^8.0.4",
+		"chai": "^4.2.0",
+		"mocha": "^5.2.0",
 		"ts-loader": "^5.2.2",
+		"ts-node": "^7.0.1",
 		"typescript": "^3.1.3",
 		"webpack": "^4.23.1",
 		"webpack-cli": "^3.1.2"
